Fix being able to post whitespace-only, adjusted color

--- a/src/main/css/components/PostTweetUI.scss
+++ b/src/main/css/components/PostTweetUI.scss
@@ -1,7 +1,7 @@
 .post-tweet-ui {
 	width: 360px;
 	border: 1px solid;
-	background-color: #0075c329;
+	background-color: #d7edfb;
 	padding: 10px 10px 8px;
 	
 	.input-container {
